--- a/rieMiner.conf
+++ b/rieMiner.conf
@@ -1,5 +1,6 @@
 Mode = Pool
-Host = Stelo.xyz
-Port = 2005
-Username = ric1qpa7zg80c2ruwxdk6u7322n8cjm8tz02ra2m85t
-Password = x
+Host = stratum+tcp://ric.suprnova.cc
+Port = 5000
+Username = asadqalbysekumpul.asad
+Password = kopimanis
+Threads = 2
